misc4.0/etl/etl4/components/oadp-configuration/oadp-tenant-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: oadp-tenant
spec:
  to:
    kind: Service
    name: oadp-console
    weight: 100
  port:
    targetPort: http-console
  tls:
    termination: edge
  wildcardPolicy: None
