misc4.0/etl/etl4/components/oadp-configuration/routes.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: velero-ui
spec:
  host: velero-ui.apps.${CLUSTER_BASE_DOMAIN}
  path: /
  to:
    kind: Service
    name: velero-ui-vui-ui
    weight: 100
  port:
    targetPort: velero-ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: velero-api
spec:
  host: velero-ui.apps.${CLUSTER_BASE_DOMAIN}
  path: /api
  to:
    kind: Service
    name: velero-ui-vui-api
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None  
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: velero-ws
spec:
  host: velero-ui.apps.${CLUSTER_BASE_DOMAIN}
  path: /ws
  to:
    kind: Service
    name: velero-ui-vui-api
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
